# QKeyboard

./: .clang-format  .coderabbit.yaml  .cppcheck-suppressions  AI.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  VERSIONING.md  codecov.yml  hostile_review.md
.github/workflows/: ci.yml  codeql.yml
examples/: CMakeLists.txt
examples/qml_example/: CMakeLists.txt  Main.qml  main.cpp
examples/widgets_example/: CMakeLists.txt  main.cpp
i18n/: qkeyboardwidget_ko.ts
include/qkeyboard/: hangul_composer.h  kana_composer.h  key_button.h  key_definition.h  keyboard_controller.h  keyboard_layout.h  keyboard_theme.h  keyboard_widget.h  qml_registration.h
include/qkeyboardwidget/: abstract_composer.h  hangul_composer.h  kana_composer.h  key_button.h  key_definition.h  keyboard_controller.h  keyboard_layout.h  keyboard_theme.h  keyboard_widget.h  qml_registration.h
layouts/schema/: keyboard-layout.schema.json
qml/: KeyboardKey.qml  KeyboardPanel.qml
qml/QKeyboard/: KeyboardKey.qml  KeyboardPanel.qml  qmldir
qml/QKeyboardWidget/: KeyboardKey.qml  KeyboardPanel.qml  qmldir
resources/: qkeyboard.qrc  qkeyboardwidget.qrc
resources/i18n/: qkeyboard_de.ts  qkeyboard_es.ts  qkeyboard_fr.ts  qkeyboard_ja.ts  qkeyboard_ko.ts  qkeyboard_ru.ts  qkeyboard_zh.ts  qkeyboardwidget_de.ts  qkeyboardwidget_es.ts  qkeyboardwidget_fr.ts  qkeyboardwidget_ja.ts  qkeyboardwidget_ru.ts
resources/layouts/: de.json  en.json  es.json  fr.json  ja.json  ja_kana.json  ja_romaji.json  ko.json  ru.json  zh.json
src/: hangul_composer.cpp  kana_composer.cpp  key_button.cpp  key_definition.cpp  keyboard_controller.cpp  keyboard_layout.cpp  keyboard_theme.cpp  keyboard_widget.cpp  qml_registration.cpp
tests/: CMakeLists.txt  tst_abstractcomposer.cpp  tst_hangulcomposer.cpp  tst_kanacomposer.cpp  tst_keyboardcontroller.cpp  tst_keyboardlayout.cpp  tst_keyboardtheme.cpp  tst_keyboardwidget.cpp  tst_keybutton.cpp  tst_layouts.cpp  tst_quick.cpp  tst_translations.cpp
tests/qml/: tst_KeyboardKey.qml  tst_KeyboardPanel.qml
